# kerf

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
benchmark/: routing_benchmark.py
crates/kerf-api/: Cargo.toml
crates/kerf-api/src/: lib.rs  main.rs
crates/kerf-cli/: Cargo.toml
crates/kerf-cli/src/: main.rs
crates/kerf-cli/tests/: cli.rs
crates/kerf-core/: Cargo.toml
crates/kerf-core/benches/: denote.rs
crates/kerf-core/proptest-regressions/: denote.txt
crates/kerf-core/proptest-regressions/pass/: travel_order.txt
crates/kerf-core/src/: analyze.rs  backend.rs  denote.rs  diff.rs  feature.rs  flow.rs  hash.rs  incremental.rs  json.rs  kinematics.rs  lib.rs  lower.rs  metamorphic.rs  printability.rs  schema.rs  tolerance.rs  transform.rs  verify.rs  voxel.rs
crates/kerf-core/src/frontend/: gcode.rs  mod.rs
crates/kerf-core/src/ir/: hi.rs  lo.rs  mod.rs
crates/kerf-core/src/pass/: mod.rs  travel_order.rs
crates/kerf-engine/: Cargo.toml  build.rs
crates/kerf-engine/src/: lib.rs
crates/kerf-ingest/: Cargo.toml
crates/kerf-ingest/src/: lib.rs
crates/kerf-py/: Cargo.toml  build.rs
crates/kerf-py/src/: handle.rs  lib.rs
crates/kerf-queue/: Cargo.toml
crates/kerf-queue/src/: lib.rs
crates/kerf-render/: Cargo.toml
crates/kerf-render/src/: lib.rs
crates/kerf-store/: Cargo.toml
crates/kerf-store/src/: lib.rs  pg.rs
crates/kerf-worker/: Cargo.toml
crates/kerf-worker/src/: lib.rs
docs/: 00-thesis.md  01-prior-art.md  02-slicer-architecture.md  03-research-frontier.md  04-pain-points.md  05-direction.md  06-architecture.md  07-design-review.md  08-semantics.md  09-volume-denotation.md  10-performance.md  sources.md
examples/: rl_toolpath.py  sample.gcode  verify.py
kerf-fuzz/: DESIGN.html  README.md  campaign.py  hunt.py  hunt_probe.py  run.py  validate.py
kerf-fuzz/kerffuzz/: __init__.py  adapters.py  configs.py  corpus.py  instance.py  meshgen.py  oracle.py  probe.py  report.py  shapes.py  shrink.py
kerf-fuzz/reports/: cura_nondeterminism_sphere.stl  divergence.json  trust_boundary.html
proofs/: KerfProofs.lean  README.md  lake-manifest.json  lakefile.toml
python/kerf/: __init__.py
python/pykerf/: __init__.py
