[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pykerf"
version = "0.5.1"
description = "Verify and diff 3D-printer G-code by the material it deposits — an open, checkable IR for the mesh-to-G-code half of the fabrication pipeline."
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [
    { name = "Khushiyant", email = "khushiyant2002@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["3d-printing", "gcode", "verification", "slicer", "fabrication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/khushiyant/kerf"
Repository = "https://github.com/khushiyant/kerf"
Changelog = "https://github.com/khushiyant/kerf/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "crates/kerf-py/Cargo.toml"
python-source = "python"
module-name = "pykerf._kerf"
features = ["pyo3/extension-module"]
