[package]
name = "kerf-core"
description = "Engine-independent IR, passes, backends, and verifier for the mesh->G-code half of fabrication."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "kerf_core"

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
