[package]
name = "kerf-core"
description = "Engine-independent IR, passes, backends, and verifier for the mesh->G-code half of fabrication."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "kerf_core"

# `kani` is set by the Kani model checker (`cargo kani`), not by Cargo — declare it so the
# unexpected_cfgs lint stays green under `-D warnings`. See src/denote.rs / frontend/gcode.rs
# `kani_proofs` modules and docs/08-semantics.md §5.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rayon = "1"

[dev-dependencies]
proptest = "1"
