[package]
name = "kerf-engine"
description = "Deterministic, versioned wrapper over kerf-core: self-describing, reproducible verdict envelopes for the Kerf service."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
# Internal service crate — distributed only as part of the Kerf platform, never to crates.io.
publish = false

[dependencies]
kerf-core = { path = "../kerf-core", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
