[package]
name = "kerf-queue"
description = "Durable job queue for the Kerf platform, behind a trait (in-memory now; Postgres SKIP-LOCKED in Phase 2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
