[package]
name = "kerf-render"
description = "Render Kerf deposited-material occupancy and per-layer visual diffs to PNG."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
kerf-core = { path = "../kerf-core" }
png = "0.17"
