[package]
name = "kerf-store"
description = "Persistence layer for the Kerf platform: content-addressed blobs, jobs, and immutable results."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
kerf-engine = { path = "../kerf-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
