[package]
name = "kerf-worker"
description = "Kerf platform worker: leases jobs, runs verify/diff through kerf-engine, stores immutable results."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
kerf-engine = { path = "../kerf-engine" }
kerf-store = { path = "../kerf-store" }
kerf-queue = { path = "../kerf-queue" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
